--- a/add_index.html
+++ b/add_index.html
@@ -716,6 +716,12 @@
         </div>
     </footer>
 
+    <div class="go-button">
+        <a href="">
+            위캐닝스타트<br>바로가기
+        </a>
+    </div>
+
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/swiper.min.js"></script>
     <script src="./js/scripts.js"></script>
