--- a/add_start_index.html
+++ b/add_start_index.html
@@ -315,9 +315,12 @@
         <div class="wecaning-start-main-visual is-hidden-mobile">
             <div class="container">
                 <div class="subject">
-                    <sup>아이의 행복을 위한 슬기로운 부모생활</sup>
+                    <sup>노규식 박사가 알려주는<br>슬기로운 부모들의 슬기로운 육아법</sup>
                     <h1>위캐닝 스타트</h1>
-                    <a href="" class="button is-primary is-medium">시작하기</a>
+                    <div class="buttons">
+                        <a href="" class="button is-primary is-medium">스타트 분석 바로가기</a>
+                        <a href="" class="button is-link is-medium">스타트 미션 바로가기</a>
+                    </div>
                 </div>
                 <img src="./img/wecaning_start_visual.png">
             </div>
@@ -327,9 +330,12 @@
         <div class="wecaning-start-main-visual is-hidden-tablet">
             <div class="container">
                 <div class="subject">
-                    <sup>아이의 행복을 위한 슬기로운 부모생활</sup>
+                    <sup>노규식 박사가 알려주는<br>슬기로운 부모들의 슬기로운 육아법</sup>
                     <h1>위캐닝 스타트</h1>
-                    <a href="" class="button is-primary is-medium">시작하기</a>
+                    <div class="buttons">
+                        <a href="" class="button is-primary is-medium">스타트 분석 바로가기</a>
+                        <a href="" class="button is-link is-medium">스타트 미션 바로가기</a>
+                    </div>
                 </div>
                 <img src="./img/wecaning_start_visual_mobile.png">
             </div>
@@ -341,8 +347,8 @@
                 <div class="text">
                     <img src="./img/wecaning_start_family.png">
                     <div class="desc">
-                        <span><b>노규식 박사의 노하우</b>와<br><b>위캐닝의 검증된 기술</b>을 통해 완성된</span>
-                        <h2>성장관리 솔루션</h2>
+                        <span><b>노규식 박사의 노하우</b>와<br><b>위캔엘티디의 검증된 기술</b>을 통해 완성된</span>
+                        <h2>부모 참여형 육아 코칭 솔루션</h2>
                     </div>
                 </div>
                 <div class="movie">
@@ -548,6 +554,12 @@
             <div class="copyright">&copy; 마음사이</div>
         </div>
     </footer>
+
+    <div class="go-button">
+        <a href="">
+            마음사이<br>바로가기
+        </a>
+    </div>
 
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/swiper.min.js"></script>
