--- a/add_start_index.html
+++ b/add_start_index.html
@@ -418,6 +418,9 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
+                <div class="buttons is-centered">
+                    <a href="" class="button is-medium">전체보기</a>
+                </div>
             </div>
         </section>
 
